@@ -1,0 +1,7 @@
+=======================
+* SAMPLE SOURCE
+=======================
+All sample files are download from http://www.mx.iucr.org/iucr-top/comm/cpd/QARR/data-kit.htm
+You can get more raw files from the above URL.
+
+The detailed URL of each file can be found in samples/get_samples.sh 
